// gRPC Service
syntax = "proto3";

package com.embedd;
option go_package = "golang/core/proto;proto";

message EmbeddData {
    int64 document_id = 1;
    string key = 2;
    string model = 3;
    string content = 4;
    repeated float vector = 5;
}